--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -6,13 +6,13 @@ RUN apk add --no-cache git
 COPY go.mod go.sum* ./
 RUN go mod download
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -o bedrock-gateway .
+RUN CGO_ENABLED=0 GOOS=linux go build -o aws-bedrock-gateway .
 
 FROM alpine:3.18
 
 RUN apk --no-cache add ca-certificates
 WORKDIR /app
-COPY --from=builder /app/bedrock-gateway .
+COPY --from=builder /app/aws-bedrock-gateway .
 EXPOSE 8000
 
-CMD ["./bedrock-gateway"]
+CMD ["./aws-bedrock-gateway"]
