--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -11,6 +11,7 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o aws-bedrock-gateway .
 FROM alpine:3.18
 
 RUN apk --no-cache add ca-certificates
+RUN apk add --no-cache curl
 WORKDIR /app
 COPY --from=builder /app/aws-bedrock-gateway .
 EXPOSE 8000
